Stylesheet/emote/tag updates 2012-12-10

--- a/source-css/berrytubelounge.css
+++ b/source-css/berrytubelounge.css
@@ -171,7 +171,7 @@ height: 140px;
 background-image: url(%%btlemotetable2%%) !important
 }
 
-a[href|="/bptuba"], a[href|="/miggyb"], a[href|="/omnomtom"], a[href|="/jeb"] {
+a[href|="/bptuba"], a[href|="/miggyb"], a[href|="/crystalmuffins"], a[href|="/omnomtom"], a[href|="/jeb"] {
 display:block;
 clear: none;
 float: left;
@@ -206,16 +206,6 @@ width: 210px;
 height: 140px;
 background-image: url(%%btlemotetable3%%) !important
 }
-
-/* Temporarily Removed until a blank background in progress by Kallado is finished
-a[href|="/cmcbop"]{
-display:block;
-clear: none;
-float: left;
-width: 140px;
-height: 70px;
-background-image: url(%%cmcbop%%) !important
-}*/
 
 a[href|="/octydance"]{
 display:block;
@@ -271,12 +261,75 @@ height: 70px;
 background-image: url(%%vsheadbang%%) !important
 }
 
+a[href|="/sbpout"]{
+display:block;
+clear: none;
+float: left;
+width: 108px;
+height: 140px;
+background-image: url(%%sbpout%%) !important
+}
+
+a[href|="/scootabop"]{
+display:block;
+clear: none;
+float: left;
+width: 110px;
+height: 140px;
+background-image: url(%%scootabop%%) !important
+}
+
+a[href|="/scootafly"]{
+display:block;
+clear: none;
+float: left;
+width: 161px;
+height: 140px;
+background-image: url(%%scootafly%%) !important
+}
+
+a[href|="/scootafreakout"]{
+display:block;
+clear: none;
+float: left;
+width: 139px;
+height: 140px;
+background-image: url(%%scootafreakout%%) !important
+}
+
+a[href|="/scootalove"]{
+display:block;
+clear: none;
+float: left;
+width: 97px;
+height: 140px;
+background-image: url(%%scootalove%%) !important
+}
+
+a[href|="/scootatwitch"], a[href|="/scootahungover"], a[href|="/cades"]{
+display:block;
+clear: none;
+float: left;
+width: 140px;
+height: 144px;
+background-image: url(%%scootatwitch-emote%%) !important
+}
+
+a[href|="/cmcshake"]{
+display:block;
+clear: none;
+float: left;
+width: 140px;
+height: 87px;
+background-image: url(%%cmcshake%%) !important
+}
+
 /* Sheet offsets */
 a[href|="/btl00"], a[href|="/halp"] {
 background-position: -0px -0px
 }
 
-a[href|="/btl10"], a[href|="/onekeg"], a[href|="/blt10"], a[href|="/ppmoonwalk"], a[href|="/miggyb"] {
+a[href|="/btl10"], a[href|="/onekeg"], a[href|="/blt10"], a[href|="/ppmoonwalk"], a[href|="/miggyb"], a[href|="/crystalmuffins"] {
 background-position: -70px -0px
 }
 
