--- a/source-css/pankakke.css
+++ b/source-css/pankakke.css
@@ -39,6 +39,7 @@ JustAnotherGDB
 - Emote for Fearless (9/18)
 - Lots-a-new emotes in the interim (10/1 - 11/3)
 - Doctorfun added.  We're being fuckin rebels. (12/4)
+- Emotes for Cursed and Apprentice. Added zecorapour (12/10)
 
 MisanthropicCat
 - Is a kitty
@@ -260,7 +261,7 @@ a[href|="/evanmacave"] {
     }
 
 /************MLP-LRG*************/
-a[href|="/pghoofpump"], a[href|="/pgshock"], a[href|="/pglegcross"], a[href|="/pgshuffle"], a[href|="/ponykakke"], a[href|="/gdb"], a[href|="/gdbsmirk"],  a[href|="/dinsfire"], a[href|="/dintrot"],  a[href|="/sprankton"], a[href|="/sistersprankton"], a[href|="/flutterhey"], a[href|="/zealot"], a[href|="/sisterzealot"], a[href|="/octaviagasm"], a[href|="/mangohug"], a[href|="/petra"], a[href|="/acer"], a[href|="/darkman"], a[href|="/calcos"], a[href|="/synesthesia"], a[href|="/srslypickled"], a[href|="/twinazi"] {
+a[href|="/pghoofpump"], a[href|="/pgshock"], a[href|="/pglegcross"], a[href|="/pgshuffle"], a[href|="/ponykakke"], a[href|="/gdb"], a[href|="/gdbsmirk"],  a[href|="/dinsfire"], a[href|="/dintrot"],  a[href|="/sprankton"], a[href|="/sistersprankton"], a[href|="/flutterhey"], a[href|="/zealot"], a[href|="/sisterzealot"], a[href|="/octaviagasm"], a[href|="/mangohug"], a[href|="/petra"], a[href|="/acer"], a[href|="/darkman"], a[href|="/calcos"], a[href|="/synesthesia"], a[href|="/srslypickled"], a[href|="/twinazi"], a[href|="/discursed"], a[href|="/apprentice"], a[href|="/zecorapour"] {
     display: block;
     clear: none;
     float: left;
@@ -358,6 +359,18 @@ a[href|="/srslypickled"] {
 a[href|="/twinazi"] {
     background-position: -2272px -0px;
     width: 155px
+    }
+a[href|="/discursed"] {
+    background-position: -2427px -0px;
+    width: 169px
+    }
+a[href|="/apprentice"] {
+    background-position: -2596px -0px;
+    width: 150px
+    }
+a[href|="/zecorapour"] {
+    background-position: -2746px -0px;
+    width: 144px
     }
 
 /***********MLP-XLRG*************/
