--- a/source-css/mylittleserver.css
+++ b/source-css/mylittleserver.css
@@ -242,6 +242,14 @@ a[href|="/mlsf2"], a[href|="/sgwsi"] {
     height: 129px;
     background-image: url(%%sgwsi%%)
     }
+a[href|="/mlsf3"], a[href|="/cocaineking"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 247px;
+    height: 349px;
+    background-image: url(%%cocaineking%%)
+    }
 END-PONYSCRIPT-IGNORE{color:red;}
 
 /*Changing Names*/
