--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -13,7 +13,7 @@ clear: none;
 float: left;
 width: 70px;
 height: 70px;
-background-image: url(%%fsmotes%%) !important
+background-image: url(%%fsmotes%%)
 }
 
 a[href|="/fs00"] { background-position: -0px -0px }
@@ -78,6 +78,22 @@ a[href|="/flutterwoo"], a[href|="/shywoo"] {
     height: 200px;
     background-image: url(%%flutterwoo%%)
     }
+a[href|="/surprisedflutters"], a[href|="/surprisedflutter"], a[href|="/surprisedshy"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 239px;
+    height: 250px;
+    background-image: url(%%surprisedfluttershy%%)
+    }
+a[href|="/shyhood"], a[href|="/hoodieflutter"], a[href|="/hoodieshy"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 300px;
+    height: 300px;
+    background-image: url(%%hoodieflutts%%)
+    }
 
 /* Animotes - aPNG emotes! */
 
@@ -137,9 +153,11 @@ a[href|="/flutterhugs"] {
     height: 267px;
     background-image: url(%%flutterhugs%%)
     }
-/* Wintery emotes */
+/* Wintery emotes - Only two at the moment- */
 
-a[href|="/snowshy"], a[href|="/wfs00"], a[href|="/wfs01"], a[href|="/wfs02"], a[href|="/wfs10"], a[href|="/wfs20"], a[href|="/wfs11"], a[href|="/wfs12"], a[href|="/wfs21"], a[href|="/wfs22"]  {
+
+
+a[href|="/snowshy"], a[href|="/wfs00"], a[href|="/wfs01"], a[href|="/wfs02"], a[href|="/wfs10"], a[href|="/merryshy"], a[href|="/wfs20"], a[href|="/scarfshy"], a[href|="/wfs11"], a[href|="/wfs12"], a[href|="/wfs21"], a[href|="/wfs22"] {
 
 display: block;
 clear: none;
@@ -150,6 +168,8 @@ background-image: url(%%wintermotes%%) !important
 }
 
 a[href|="/snowshy"], a[href|="/wfs00"] { background-position: -0px -0px }
+a[href|="/merryshy"], a[href|="/wfs10"] { background-position: -100px -0px }
+a[href|="/scarfshy"], a[href|="/wfs20"] { background-position: -200px -0px }
 
 /* Space thingy */
 a[href|="/sp"] {
@@ -244,14 +264,14 @@ a[href|="/sp"] {
         display: none;
         }  
     .subscribers .number::after {
-        content: " Giant Fluttershy hats";
+        content: " Flutters";
         }
 
 .users-online .word {
         display: none;
         }  
     .users-online .number::after {
-        content: " being worn.";
+        content: " being shy.";
         }
 
 /* RES nightmode flair fix */
