Stylesheet/emote/tag updates 2012-12-13

--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -255,14 +255,14 @@ background-image: url(%%bj-anim%%);
 
 a[href|="/bjbubbles"]{ background-position: 0px 0px;}
 
-a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"], a[href|="/bjsurprise"], a[href|="/lpfilly"], a[href|="/qnwhsk"], a[href|="/bjwhiskey"], a[href|="/crazyrampage"], a[href|="/deus"], a[href|="/grumpypip"], a[href|="/g3bj"]
+a[href|="/lpnotsure"], a[href|="/p21fh"], a[href|="/bjboom"], a[href|="/drrampage"], a[href|="/lpinspire"], a[href|="/calamitywtf"], a[href|="/harmony"], a[href|="/bjsurprise"], a[href|="/lpfilly"], a[href|="/qnwhsk"], a[href|="/bjwhiskey"], a[href|="/crazyrampage"], a[href|="/deus"], a[href|="/grumpypip"], a[href|="/g3bj"], a[href|="/mop"]
 {
 display: block;
 clear: none;
 float: left;
 width: 70px;
 height: 70px;
-background-image: url(%%foe-em3-v28%%);
+background-image: url(%%foe-em3-v29%%);
 }
 
 a[href|="/lpnotsure"]{ background-position: 0px 0px; width:150px; height:150px;}
@@ -281,6 +281,7 @@ a[href|="/crazyrampage"]{ background-position: 0px -2060px; width: 150px; height
 a[href|="/deus"]{ background-position: 0px -2170px; width: 150px; height: 139px;}
 a[href|="/grumpypip"]{ background-position: 0px -2315px; width: 142px; height: 150px;}
 a[href|="/g3bj"]{ background-position: 0px -2470px; width: 75px; height: 70px;}
+a[href|="/mop"]{ background-position: 0px -2545px; width: 100px; height: 150px;}
 
 
 a[href|="/advicebj"]
@@ -299,7 +300,7 @@ a[href|="/advicebj"]
     overflow: hidden !important;
     position: relative !important;
     text-transform: uppercase !important;
-    background-image: url(%%foe-em3-v22%%) !important;
+    background-image: url(%%foe-em3-v29%%) !important;
 }
 
 a[href|="/advicebj"]{ background-position: 0px -950px; width: 300px; height: 300px;}
@@ -326,7 +327,7 @@ a[href|='/advicebj'] strong{
 
 
 a[href|="/lpsign"]{
-    background-image: url(%%foe-em3-v22%%) !important;
+    background-image: url(%%foe-em3-v29%%) !important;
     background-repeat: no-repeat !important;
     display: inline-block !important;
     position: relative !important;
