--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -94,7 +94,30 @@ a[href|="/shyhood"], a[href|="/hoodieflutter"], a[href|="/hoodieshy"] {
     height: 300px;
     background-image: url(%%hoodieflutts%%)
     }
-
+a[href|="/shynervous"], a[href|="/flutternervous"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 222px;
+    height: 250px;
+    background-image: url(%%welp%%)
+    }
+a[href|="/flutterstare"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 70px;
+    background-image: url(%%stare%%)
+    }
+a[href|="/fluttersup"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 225px;
+    height: 150px;
+    background-image: url(%%fluttersup%%)
+    }
 /* Animotes - aPNG emotes! */
 
 a[href|="/fluttersmile"], a[href|="/shysmile"] {
