--- a/source-css/mlas1animotes.css
+++ b/source-css/mlas1animotes.css
@@ -56,6 +56,11 @@ a[href|='/omgomgomg'] { width:150px; height:150px; background-image: url(%%dasho
 a[href|='/twisax'] { width:151px; height:150px; background-image: url(%%twisax%%); background-position: 0px 0px; display: block; clear: none; float: left}
 
 a[href|='/woonadance'] { width:130px; height:106px; background-image: url(%%woonadance%%); display: block; clear: none; float: left}
+a[href|='/sbfrown'] { width:154px; height:200px; background-image: url(%%sbfrown%%); display: block; clear: none; float: left}
+
+a[href|='/scootascared'] { width:100px; height:100px; background-image: url(%%scootascared%%); display: block; clear: none; float: left}
+a[href|='/scootawoo'] { width:150px; height:131px; background-image: url(%%scootawoo%%); display: block; clear: none; float: left}
+
 
 a[href|="/ppbop"], a[href|="/dashbop"], a[href|="/twibob"] {
     display: block;
